fixed link on React page & re-aligned the text on the projects page

--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,9 @@ p {
 .single-screenshot {
   margin-left: 2.5vw;
   margin-right: 2.5vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .single-screenshot img {
